# Ni-Dataset

./: .gitignore  AUDIT.md  README.md  _config.yml  example.py  index.md  pyproject.toml  qc.example.yaml  requirements.txt
docs/: QC_DESIGN.md  index.md  installation.md
docs/functions/: apply_transform.md  compare_volumes.md  compare_volumes_dataset.md  compute_volume_statistics.md  compute_volume_statistics_dataset.md  create_slice_montage.md  crop_and_pad.md  crop_and_pad_dataset.md  dataset_annotations_info.md  dataset_images_info.md  draw_2D_annotations.md  draw_3D_boxes.md  draw_boxes.md  extract_annotations.md  extract_annotations_dataset.md  extract_bouding_boxes_dataset.md  extract_bounding_boxes.md  extract_slices.md  extract_slices_dataset.md  from_2D_to_3D_coords  from_2D_to_3D_coords.md  generate_brain_mask.md  generate_brain_mask_dataset.md  generate_heatmap_volume.md  index.md  intensity_normalization.md  intensity_normalization_dataset.md  mip.md  mip_dataset.md  nifti_to_numpy.md  numpy_to_nifti.md  overlay_mask_on_volume.md  overlay_mask_on_volume_dataset.md  register_CTA.md  register_CTA_dataset.md  register_annotation.md  register_annotation_dataset.md  register_mask.md  register_mask_dataset.md  resample_to_reference.md  (+10 more)
docs/qc/: check_dataset.md  check_pair.md  check_triple.md  check_volume.md  cli.md  index.md  qc.example.json  qcconfig.md  thumbnail_grid.md
nidataset/: Draw.py  Preprocessing.py  Volume.py  __init__.py  _helpers.py  analysis.py  draw.py  preprocessing.py  slices.py  transforms.py  utility.py  visualization.py  volume.py
nidataset/qc/: __init__.py  checks.py  cli.py  config.py  dataset.py  pairs.py  report.py  thumbnails.py
tests/: test_crop_and_pad.py  test_qc.py  test_swap_views.py  test_visualization.py
